force-app/main/default/objects/Test_Case__c/Test_Case__c.object-meta.xml
<CustomObject>
    <description>Test Cases &amp; Scripts for UAT, System, and Data testing.</description>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>