force-app/main/default/objects/Test_Case__c/fields/Actual_Results__c.field-meta.xml
<CustomField>
    <fullName>Actual_Results__c</fullName>
    <label>Actual Results</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>