force-app/main/default/objects/Test_Case__c/fields/Assign_to_Developer__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When test fails assign to developer</description>
    <inlineHelpText>When test fails assign to developer</inlineHelpText>
    <label>Assign to Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>