force-app/main/default/objects/Test_Case__c/fields/Assign_to_Developer_Non_SF_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Developer_Non_SF_User__c</fullName>
    <description>When test fails assign to developer</description>
    <inlineHelpText>When test fails assign to developer</inlineHelpText>
    <label>Assign to Developer (Non SF User)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>