force-app/main/default/objects/Test_Case__c/fields/Assigned_To_Tester__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QA person the Test Case is assigned to</description>
    <label>Assigned To Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>