force-app/main/default/objects/Test_Case__c/fields/Dev_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dev_Comments__c</fullName>
    <label>Dev Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>