force-app/main/default/objects/Test_Case__c/fields/Parent_test_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>