force-app/main/default/objects/Test_Case__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <type>TextArea</type>
</CustomField>