force-app/main/default/objects/Test_Case__c/fields/Pre_Requisites__c.field-meta.xml
<CustomField>
    <fullName>Pre_Requisites__c</fullName>
    <label>Pre Requisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>