force-app/main/default/objects/Test_Case__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>