force-app/main/default/objects/Test_Case__c/fields/Step_of_Test__c.field-meta.xml
<CustomField>
    <fullName>Step_of_Test__c</fullName>
    <label>Step of Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>