force-app/main/default/objects/Test_Case__c/fields/Test_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Name__c</fullName>
    <label>Test Case Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>