force-app/main/default/objects/Test_Case__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <label>Test Script</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>