force-app/main/default/objects/Test_Case__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>System</fullName>
                <default>true</default>
                <label>System</label>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>E2E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>