force-app/main/default/objects/Test_Case__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Test_Case_Name__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <columns>Actual_Results__c</columns>
    <columns>Detailed_Requirement__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>AllRWSPublicGroup</group>
    </sharedTo>
</ListView>