force-app/main/default/objects/Test_Case__c/listViews/Industrial_Accounts_Solution_Test_Cases.listView-meta.xml
<ListView>
    <fullName>Industrial_Accounts_Solution_Test_Cases</fullName>
    <columns>NAME</columns>
    <columns>Test_Case_Name__c</columns>
    <columns>Project__c</columns>
    <columns>testStatus__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Test_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Retail Solution</value>
    </filters>
    <filters>
        <field>High_Level_Requirement__c</field>
        <operation>equals</operation>
        <value>POS Employee Maintenance</value>
    </filters>
    <label>Employee Maintenance Test Cases</label>
    <sharedTo>
        <group>Industrial_Accounts_Solution_Intershop</group>
        <group>Industrial_Accounts_Solution_RWSC_User</group>
        <group>Internal_RWSC_QA_Testing</group>
    </sharedTo>
</ListView>