force-app/main/default/objects/Test_Case__c/listViews/integration_tests.listView-meta.xml
<ListView>
    <fullName>integration_tests</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Test_Case_Name__c</columns>
    <columns>Detailed_Requirement__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <columns>Result__c</columns>
    <columns>testStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Type__c</field>
        <operation>equals</operation>
        <value>Integration</value>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Retail Solution</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>integration tests</label>
</ListView>