force-app/main/default/objects/Test_Case__c/listViews/Retail_Solution_Test_Cases.listView-meta.xml
<ListView>
    <fullName>Retail_Solution_Test_Cases</fullName>
    <columns>High_Level_Requirement__c</columns>
    <columns>NAME</columns>
    <columns>Test_Case_Name__c</columns>
    <columns>Detailed_Requirement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Retail</value>
    </filters>
    <filters>
        <field>High_Level_Requirement__c</field>
        <operation>contains</operation>
    </filters>
    <label>Retail Solution Test Cases</label>
    <sharedTo>
        <group>Internal_RWSC_QA_Testing</group>
        <group>Retail_Solution_POS_RWSC_Admin_Group</group>
    </sharedTo>
</ListView>